# python-basic

./: .gitignore  README.md  basic.py  example.py  pyproject.toml  requirements.txt
src/snifflogic_basic/: __init__.py  example.py
