[build-system]
requires = ["setuptools>=61.0", "pyserial", "rich"]
build-backend = "setuptools.build_meta"
[project]
name = "snifflogic_basic"
dependencies = ["pyserial", "rich"]
version = "0.0.1"
authors = [{ name = "snifflogic", email = "support@snifflogic.com" }]
description = "Python SDK for communicating with the Sniff Controller Basic of Sniff Logic"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/snifflogic/python-basic/issues"
